# codora-framework

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
crates/: README.md
crates/codora-framework/: Cargo.toml  README.md
crates/codora-framework-bot/: Cargo.toml
crates/codora-framework-bot/examples/: dev-test-setup.rs  graceful.rs  hyper.rs
crates/codora-framework-bot/src/: lib.rs
crates/codora-framework-bot/src/adapter/: mod.rs
crates/codora-framework-bot/src/adapter/telegram/: mod.rs
crates/codora-framework-bot/src/adapter/telegram/listener/: mod.rs
crates/codora-framework-bot/src/bot/: context.rs
crates/codora-framework-bot/src/codoraframeworkbot/: mod.rs
crates/codora-framework-bot/src/codoraframeworkbot/bot/: context.rs
crates/codora-framework-bucket/: Cargo.toml
crates/codora-framework-conf/: Cargo.toml
crates/codora-framework-conf/src/: lib.rs
crates/codora-framework-conf/src/de/: mod.rs
crates/codora-framework-conf/src/source/: enviroment.rs  mod.rs  multi_source.rs  remote_source.rs
crates/codora-framework-identity/: Cargo.toml
crates/codora-framework-identity/src/: lib.rs
crates/codora-framework-identity/src/codoraframeworkidentity/user/: mod.rs
crates/codora-framework-macro/: Cargo.toml
crates/codora-framework-macro/src/: lib.rs
crates/codora-framework-macro/src/codora_framework_bot/: mod.rs
crates/codora-framework-orm/: Cargo.toml
crates/codora-framework-orm/src/: lib.rs
crates/codora-framework-security/: Cargo.toml
crates/codora-framework-security/src/: lib.rs  prelude.rs
crates/codora-framework-security/src/adapter/: axum.rs  mod.rs
crates/codora-framework-security/src/adapter/axum/: codoraframeworksecurity.rs  mod.rs  request.rs
crates/codora-framework-security/src/authentication/: handler.rs  mod.rs
crates/codora-framework-security/src/authentication/context/: builder.rs  extension.rs  mod.rs
crates/codora-framework-security/src/authentication/cookie/: handler.rs  mod.rs  payload.rs  response.rs
crates/codora-framework-security/src/authentication/handler/: mod.rs
crates/codora-framework-security/src/authentication/handler/cookie/: error.rs  handler.rs  mod.rs  response.rs
crates/codora-framework-security/src/authentication/jwt/: mod.rs
crates/codora-framework-security/src/codoraframeworksecurity/: mod.rs
crates/codora-framework-security/src/codoraframeworksecurity/authorization/: mod.rs
crates/codora-framework-security/src/codoraframeworksecurity/handler/: ext.rs  mod.rs
crates/codora-framework-security/src/codoraframeworksecurity/http/: request.rs
crates/codora-framework-security/src/context/: extensions.rs  mod.rs
crates/codora-framework-security/src/handlers/: mod.rs
crates/codora-framework-security/src/handlers/cookie/: error.rs  handler.rs  mod.rs  response.rs
crates/codora-framework-security/src/http/: mod.rs  response.rs
crates/codora-framework-worker/: Cargo.toml
crates/codora-framework/src/: lib.rs  main.rs
docs/: README.md  next.config.ts  package.json
docs/app/: layout.tsx  page.tsx
docs/app/docs/: page.mdx
examples/cf-security-cookie/: Cargo.toml
examples/cf-security-cookie/src/: main.rs
modules/codora-framework/: Cargo.toml
modules/codora-framework-adapter/: Cargo.toml
modules/codora-framework-adapter/crates/codora-framework-axum/: Cargo.toml
modules/codora-framework-adapter/crates/codora-framework-axum/src/: lib.rs
modules/codora-framework-adapter/src/: lib.rs
modules/codora-framework-bot/: Cargo.toml
modules/codora-framework-bot/examples/: hello.rs
modules/codora-framework-bot/src/: lib.rs
modules/codora-framework-web/: Cargo.toml
modules/codora-framework-web/crates/codora-bucket/: Cargo.toml
modules/codora-framework-web/crates/codora-bucket/src/: lib.rs
modules/codora-framework-web/crates/codora-framework-identity/src/: lib.rs
modules/codora-framework-web/crates/codora-framework-notification/: Cargo.toml
modules/codora-framework-web/crates/codora-framework-notification/src/: lib.rs
modules/codora-framework-web/crates/codora-framework-security/: Cargo.toml
modules/codora-framework-web/crates/codora-framework-security/examples/: codora-security.rs
modules/codora-framework-web/crates/codora-framework-security/src/: lib.rs
modules/codora-framework-web/crates/codora-framework-security/src/authentication/: handler.rs  mod.rs
modules/codora-framework-web/crates/codora-framework-security/src/authentication/cookie/: cookies.rs  mod.rs
modules/codora-framework-web/crates/codora-framework-ws/: Cargo.toml
modules/codora-framework-web/src/: lib.rs
modules/codora-framework/crates/codora-framework-proc-macro/: Cargo.toml
modules/codora-framework/crates/codora-framework-proc-macro/src/: lib.rs
modules/codora-framework/crates/codora-framework-proc-macro/src/conf/: mod.rs
modules/codora-framework/examples/: codora.rs
modules/codora-framework/src/: conf.rs  lib.rs
