[workspace]
members = [
    "crates/*",

    # Modules
    "modules/*",
    # codora-web crates
    "modules/codora-framework-web/crates/*",
    # codora-adapter crates
    "modules/codora-framework-adapter/crates/*",
]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
# Internal crates 
codora-framework = { path = "./modules/codora-framework" }
# Web crates
codora-framework-web = { path = "./modules/codora-framework-web" }
# Bot crates
codora-framework-bot = { path = "./modules/codora-framework-bot" }
# Worker crates
codora-framework-worker = { path = "./modules/codora-framework-worker" }
# Adapter crates
codora-adapter = { path = "./modules/codora-framework-adapter" }
# External crates
tracing-subscriber = "0.3.19"
tokio = "1.47.1"
tracing = "0.1.41"
axum = "0.8.4"
axum-core = "0.5.2"
anyhow = "1.0.100"
tower = "0.5.2"
uuid = "1.17.0"
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
derive_more = "2.0.1"
error-stack = "0.6.0"
derive-new = { version = "0.7.0" }

[workspace.lints]


[patch.crates-io]
# Add patch here
