[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
# Internal crates 
codora-framework = { path = "./crates/codora-framework" }
codora-framework-ws = { path = "./crates/codora-framework-ws" }
codora-framework-bot = { path = "./crates/codora-framework-bot" }
codora-framework-web = { path = "./crates/codora-framework-web" }
codora-framework-orm = { path = "./crates/codora-framework-orm" }
codora-framework-conf = { path = "./crates/codora-framework-conf" }
codora-framework-axum = { path = "./crates/codora-framework-axum" }
codora-framework-worker = { path = "./crates/codora-framework-worker" }
codora-framework-bucket = { path = "./crates/codora-framework-bucket" }
codora-framework-adapter = { path = "./crates/codora-framework-adapter" }
codora-framework-identity = { path = "./crates/codora-framework-identity" }
codora-framework-security = { path = "./crates/codora-framework-security" }
# External crates
tokio = "1.47.1"
tracing = "0.1.41"
axum = "0.8.4"
axum-core = "0.5.2"
anyhow = "1.0.100"
tower = "0.5.2"
uuid = "1.17.0"
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
derive_more = "2.0.1"
derive-new = { version = "0.7.0" }
tower-service = "0.3.3"
tracing-subscriber = "0.3.20"

[workspace.lints]


[patch.crates-io]
# Add patch here
