[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
# Internal crates 
codora-framework-bot = { path = "./crates/codora-framework-bot" }
codora-framework-macro = { path = "./crates/codora-framework-macro" }
codora-framework-identity = { path = "./crates/codora-framework-identity" }
codora-framework-security = { path = "./crates/codora-framework-security" }
# External crates
tokio = "1.47.1"
tracing = "0.1.41"
anyhow = "1.0.100"
tower = "0.5.2"
uuid = "1.17.0"
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
derive_more = "2.0.1"
derive-new = "0.7.0"
tower-service = "0.3.3"
tracing-subscriber = "0.3.20"

[workspace.lints]


[patch.crates-io]
# Add patch here
