[package]
name = "codora-framework-macro"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
proc-macro = true

[features]
default = ["full"]
full = ["codora-framework-bot-telegram", "codora-framework-bot-discord"]
codora-framework-bot = []
codora-framework-bot-telegram = []
codora-framework-bot-discord = []

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = "2.0.108"

[lints]
workspace = true
