[package]
name = "codora-framework"
license = "MIT"
description = "Open source crates for Rust developers"
readme = "README.md"
homepage = "https://github.com/codetheproject/codora-framework"
documentation = "https://docs.rs/codora-framework"
repository = "https://github.com/codetheproject/codora-framework"
keywords = ["web", "server", "orm", "authentication", "security"]
categories = ["web-programming", "database", "authentication"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]
edition = { workspace = true }


[features]
# Only enable when modifying crates/codora-framework for intellisense support
# default = ["identity", "security", "bot-discord", "bot-telegram"]
bot-telegram = [
    "dep:codora-framework-bot",
    "codora-framework-bot/codora-framework-bot-telegram",
]

# This will enable support to build discord bot using codora framework this library is purposely built for thesocialspace
bot-discord = [
    "dep:codora-framework-bot",
    "codora-framework-bot/codora-framework-bot-discord",
]
identity = ["dep:codora-framework-identity"]
security = ["dep:codora-framework-security"]

[dependencies]
codora-framework-bot = { workspace = true, optional = true }
codora-framework-identity = { workspace = true, optional = true }
codora-framework-security = { workspace = true, optional = true }
