[package]
name = "codora-framework-bot"
keywords = ["bot", "tlib", "telegram-library", "discord-library"]
categories = ["web-programming"]
edition = { workspace = true }


[lints]
workspace = true


[dependencies]
derive-new = "0.7.0"
hyper = { version = "1.7.0", features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
codora-framework = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower = { workspace = true }
error-stack = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
