[package]
name = "codora-framework-web"
version = "0.1.0"
edition = { workspace = true }
description = "Web development in codora"
keywords = ["web", "security"]
categories = ["web-programming"]

[features]
default = []
security = ["dep:codora-framework-security"]

[dependencies]
# Local crates
codora-framework-security = { path = "./crates/codora-framework-security", optional = true }
futures-util = "0.3.31"
http = "1.3.1"
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
