[package]
name = "codora-framework"
license = "MIT"
description = "Ship Rust application faster than you could ever"
readme = "README.md"
homepage = "https://github.com/codetheproject/codora"
documentation = "https://docs.rs/codora"
repository = "https://github.com/codetheproject/codora"
keywords = ["web", "server", "orm", "authentication", "security"]
categories = ["web-programming", "database", "authentication"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]
edition = { workspace = true }

[features]
default = ["macros"]
conf = []
macros = ["conf"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.46.1", features = ["full"] }
codora-framework-proc-macro = { path = "./crates/codora-framework-proc-macro" }
derive-new = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0.98"
