[package]
name = "codora-framework-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
codora-framework-web = { workspace = true, features = ["security"] }
axum = { workspace = true }
axum-core = { workspace = true }
http = { version = "1.3.1" }
derive-new = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = "0.6.6"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
